--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -4,5 +4,42 @@
 <!--<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"> -->
 
 {% block content %} <!-- block content from main.html-->
-    <h3>Store</h3>
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+                <hr>
+                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="float: right"><strong>$20</strong></h4>
+
+            </div>
+            
+        </div>
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+                <hr>
+                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="float: right"><strong>$20</strong></h4>
+
+            </div>
+            
+        </div>
+        <div class="col-lg-4">
+            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
+            <div class="box-element product">
+                <h6><strong>Product</strong></h6>
+                <hr>
+                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <a class="btn btn-outline-success" href="#">View</a>
+                <h4 style="float: right"><strong>$20</strong></h4>
+
+            </div>
+            
+        </div>
+    </div>
 {% endblock content %}
