--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -5,41 +5,19 @@
 
 {% block content %} <!-- block content from main.html-->
     <div class="row">
+        {% for product in products %}
         <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
+            <img class="thumbnail" src="{{product.imageURL}}"> <!-- <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">-->
             <div class="box-element product">
-                <h6><strong>Product</strong></h6>
+                <h6><strong>{{product.name}}</strong></h6>
                 <hr>
                 <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
                 <a class="btn btn-outline-success" href="#">View</a>
-                <h4 style="float: right"><strong>$20</strong></h4>
+                <h4 style="float: right">${{product.price|floatformat:2}}</h4>
 
-            </div>
+            </div>    
             
         </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
-                <h4 style="float: right"><strong>$20</strong></h4>
-
-            </div>
-            
-        </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
-                <h4 style="float: right"><strong>$20</strong></h4>
-
-            </div>
-            
-        </div>
+        {% endfor %}
     </div>
 {% endblock content %}
