--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -21,7 +21,7 @@
         <br>
 
         <div class="box-element">
-			<div class="cart-row">
+			<div class="cart-row">					
 				<div style="flex:2"></div>
 				<div style="flex:2"><strong>Item</strong></div>
 				<div style="flex:1"><strong>Price</strong></div>
@@ -31,9 +31,11 @@
 
 			{% for item in items%}
 			<div class="cart-row">
+				
 				<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}" ></div>
-				<div style="flex:2">{{item.product.name}} </div>
-				<div style="flex:1">${{item.product.price|floatformat:2}}</div>
+				<div style="flex:2"> <p>{{item.product.name}} </p></div>
+				<div style="flex:2"> <p>{{item.product.name}} </p></div>
+				<div style="flex:1"><p> ${{item.product.price|floatformat:2}}</p></div>
 				<div style="flex:1">
 					<p class="quantity">{{item.quantity}}</p>
 					<div class="quantity">
