--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -46,7 +46,7 @@
 
     <!-- next is a navbar from bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
+      <a class="navbar-brand" href="{% url 'store' %}">Laptop Seller</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -56,15 +56,23 @@
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
           </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'track' %}">Orders <span class="sr-only">(current)</span></a>
+          </li>
+          
      
         </ul>
+
+
         <div class="form-inline my-2 my-lg-0">
-           <a href="#"class="btn btn-warning">Login</a>
+           <!--<a href="#"class="btn btn-warning">Login</a> -->
            
            <a href="{% url 'cart' %}">
             <img  id="cart-icon" src="{% static 'images/cart.png' %}">
           </a>
           <p id="cart-total">{{cartItems}}</p>
+
   
         </div>
       </div>
