--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -66,7 +66,7 @@
 
 
         <div class="form-inline my-2 my-lg-0">
-           <a href="https://laptop-seller.herokuapp.com/admin/"class="btn btn-warning">Login</a>
+           <a href="http://127.0.0.1:8000/admin/"class="btn btn-warning">Login</a>
            
            <a href="{% url 'cart' %}">
             <img  id="cart-icon" src="{% static 'images/cart.png' %}">
